# aeropuerto-camila-laura

./: Informe de autoevaluación LL.docx  Informe de autoevaluación MC.docx  README.md  diagramaAeropuerto.drawio  diagramaAeropuerto.drawio.xml
proyecto1/: CMakeLists.txt  aeronave.cpp  aeronave.h  aeropuerto.cpp  aeropuerto.h  avion.cpp  avion.h  helicoptero.cpp  helicoptero.h  jetPrivado.cpp  jetPrivado.h  main.cpp  pasajero.cpp  pasajero.h  persona.cpp  persona.h  puertaEmbarque.cpp  puertaEmbarque.h  torreDeControl.cpp  torreDeControl.h  tripulacion.cpp  tripulacion.h  vuelo.cpp  vuelo.h
